--- a/TestOgl2/TestOgl.vcxproj
+++ b/TestOgl2/TestOgl.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="varray.c" />
+    <ClCompile Include="tex3d.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
