--- a/TestOgl2/TestOgl.vcxproj.filters
+++ b/TestOgl2/TestOgl.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="varray.c">
+    <ClCompile Include="tex3d.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
